apps/manifests/longhorn/longhorn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-retry@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - long.scigames.at
    secretName: wildcard-scigames
  rules:
  - host: long.scigames.at
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
